# AudioCraft

./: .replit  README.md  app.py  debug-check.html  docker-compose.yml  main.py  models.py  package-lock.json  package.json  pyproject.toml  replit.md  test-frontend.html
attached_assets/: Pasted---1754215553822_1754215553824.txt  Pasted--Audio-tools-clone-frontend-and-backend-ki-use-hone-wala-batao-free-make-Edit-Audio-cloning-ke-liye-1754496373147_1754496373150.txt  Pasted-Perfect-Tumne-ek-pro-level-frontend-tech-stack-decide-kiya-hai-ab-main-tumhe-ODOREMOVER-ke-liye-e-1754214741538_1754214741542.txt  Pasted-Perfect-ab-jab-tumhara-frontend-Vue-Nuxt-aur-backend-FastAPI-dono-ready-ho-gaya-hai-toh-n-1754478897183_1754478897189.txt  Pasted-Remusic-Products-Tools-Blog-AI-Singer-Pricing-Workspace-Login-Sign-Up-AI-Vocal-Remover-The-AI-Voca-1754249773562_1754249773569.txt  Pasted-Samajh-gaya-tum-chahte-ho-ekdam-professional-clean-distraction-free-frontend-jo-FastAPI--1754203302292_1754203302313.txt
backend/: Dockerfile  requirements.txt
backend/api/: auth_routes.py  presets_routes.py  processing_routes.py
backend/api_gateway/: main.py  main_simple.py
backend/auth/: jwt_handler.py
backend/services/: __init__.py
backend/shared/: audio_utils.py  config.py  database.py  processing_queue.py  storage.py
frontend/: index.html  next.config.js  nuxt.config.ts  package-lock.json  package.json  package.json.backup  tailwind.config.js  vite.config.js  vite.config.ts
frontend/.next/: build-manifest.json  prerender-manifest.json  routes-manifest.json  trace
frontend/.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  nuxt.node.d.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.server.json  tsconfig.shared.json
server/: db.ts  storage.ts
shared/: audio_utils.py  config.py  ffmpeg_utils.py  schema.ts  storage.py
static/: index.html  script.js  styles.css
(+391 files in other folders)
