[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "fastapi==0.104.1",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "librosa==0.10.1",
    "mutagen>=1.47.0",
    "numpy==1.24.3",
    "pathlib2>=2.3.7.post1",
    "pydub==0.25.1",
    "pytest>=8.4.1",
    "python-magic>=0.4.27",
    "python-multipart==0.0.6",
    "scipy>=1.15.3",
    "soundfile==0.12.1",
    "uvicorn[standard]==0.24.0",
]
