[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "black==23.11.0",
    "fastapi==0.104.1",
    "flake8==6.1.0",
    "httpx==0.25.2",
    "librosa==0.10.1",
    "mutagen==1.47.0",
    "numpy==1.24.3",
    "pathlib2==2.3.7",
    "pydub==0.25.1",
    "pytest==7.4.3",
    "python-magic==0.4.27",
    "python-multipart==0.0.6",
    "scipy==1.11.4",
    "soundfile==0.12.1",
    "uvicorn[standard]==0.24.0",
]
